syntax= "proto3";

package calculator;


option go_package ="github.com/flavioesteves/grpc-microservices-go/calculator/proto";

message CalculatorRequest {
  int32 first_number=1;
  int32 second_number=2;
}

message CalculatorResponse {
  int32 result=1;
}

service CalculatorSumService {
  rpc CalculatorSum (CalculatorRequest) returns (CalculatorResponse);
}
